
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="hr.videomarketing.Fragments.LogInFragment"
    android:id="@+id/logIn_scrollview_layout">
    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <!-- TODO: Update blank fragment layout -->

        <ImageView
            android:layout_width="wrap_content"
            app:srcCompat="@drawable/ic_epp_vip_logotip"
            android:id="@+id/iwAppLogo"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginEnd="16dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginStart="16dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_height="wrap_content" />

        <ImageView
            android:layout_width="80dp"
            android:layout_height="52dp"
            app:srcCompat="@drawable/vipnet_logo_2"
            android:id="@+id/iwNetworkProviderLogo"
            android:layout_marginEnd="16dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginStart="16dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iwAppLogo" />

        <TextView
            android:text="@string/lblUserName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/lblUserName"
            app:layout_constraintLeft_toLeftOf="@+id/etUserName"
            app:layout_constraintRight_toRightOf="@+id/etUserName"
            app:layout_constraintHorizontal_bias="0.09"
            android:layout_marginTop="64dp"
            app:layout_constraintTop_toBottomOf="@+id/iwNetworkProviderLogo" />

        <hr.videomarketing.CustomViews.MyEditText
            android:layout_width="281dp"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/etUserName"
            android:paddingLeft="8dp"
            android:layout_height="45dp"
            android:layout_marginStart="16dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginEnd="16dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/lblUserName" />

        <TextView
            android:text="@string/lblPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/lblPassword"
            app:layout_constraintLeft_toLeftOf="@+id/etPassword"
            app:layout_constraintRight_toRightOf="@+id/etPassword"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/etUserName"
            app:layout_constraintHorizontal_bias="0.08" />

        <hr.videomarketing.CustomViews.MyEditText
            android:layout_height="45dp"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/etPassword"
            android:layout_width="281dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginStart="16dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lblPassword"
            android:layout_marginTop="8dp" />

        <Button
            android:text="@string/lbl_sigIn"
            android:layout_width="281dp"
            android:layout_height="48dp"
            android:id="@+id/btnLogIn"
            app:layout_constraintTop_toBottomOf="@+id/etPassword"
            android:layout_marginTop="56dp"
            android:textAllCaps="false"
            android:layout_marginEnd="16dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginStart="16dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintHorizontal_bias="0.52" />

        <TextView
            android:text="@string/message_lbl_to_registration"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:id="@+id/lblMessage"
            app:layout_constraintLeft_toLeftOf="@+id/btnLogIn"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/btnLogIn"
            android:textAlignment="viewEnd" />

        <TextView
            android:text="@string/message_lbl_lostPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/twLostPassword"
            app:layout_constraintRight_toRightOf="@+id/etPassword"
            android:layout_marginStart="8dp"
            app:layout_constraintLeft_toRightOf="@+id/lblPassword"
            app:layout_constraintHorizontal_bias="0.7"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/etUserName" />

        <hr.videomarketing.CustomViews.MyEditText
            android:layout_width="108dp"
            android:inputType="textPersonName"
            android:text="@string/message_lbl_ffill_reg"
            android:ems="10"
            android:id="@+id/twDoRegistration"
            android:textSize="14sp"
            android:textAlignment="center"
            android:layout_height="35dp"
            android:editable="false"
            android:focusable="false"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/btnLogIn"
            app:layout_constraintRight_toRightOf="@+id/btnLogIn"
            android:layout_marginStart="8dp"
            app:layout_constraintLeft_toRightOf="@+id/lblMessage"
            app:layout_constraintHorizontal_bias="1.0" />
    </android.support.constraint.ConstraintLayout>
</ScrollView>
